--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ const pageTitle = "Pagina de inicio"
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
+		<meta name="description" content="Astro is a new kind of static site builder that delivers lightning-fast performance with a modern developer experience." />
 		<title>{ pageTitle }</title>
 	</head>
 	<body>
