--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -8,6 +8,7 @@ const pageTitle = "Mi blog de aprendizaje de Astro"
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
+    <meta name="description" content="Mi blog de aprendizaje de Astro" />
 		<title>{pageTitle}</title>
 	</head>
 	<body>
