--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,20 +1,8 @@
 ---
-const pageTitle = "Pagina de inicio"
+import BaseLayout from "../layout/BaseLayout.astro";
+const pageTitle = "Mi sitio web"
 ---
 
-<html lang="es">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<meta name="description" content="Astro is a new kind of static site builder that delivers lightning-fast performance with a modern developer experience." />
-		<title>{ pageTitle }</title>
-	</head>
-	<body>
-		<a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
-		<h1> { pageTitle } </h1>
-	</body>
-</html>
+<BaseLayout pageTitle={pageTitle}>
+  <h2>My awesome blog subtitle</h2>
+</BaseLayout>
