--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -23,6 +23,16 @@ h1 {
   font-size: 2.5rem;
 }
 
+
+html.dark {
+  background-color: #0d0950;
+  color: #fff;
+}
+
+.dark .nav-links a {
+  color: #fff;
+}
+
 /* nav styles */
 .hamburger {
   padding-right: 20px;
@@ -56,7 +66,8 @@ h1 {
   text-transform: uppercase;
 }
 
-.nav-links a:hover, a:focus {
+.nav-links a:hover,
+a:focus {
   background-color: #ff9776;
 }
 
