--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,9 +2,11 @@
 import Hamburger from "./Hamburger.astro";
 import Navigation from "./Navigation.astro";
 import ThemeIcon from './ThemeIcon.astro';
+// import { ViewTransitions } from 'astro:transitions';
 ---
 
 <header>
+  <!-- <ViewTransitions /> -->
   <nav>
     <Hamburger />
     <ThemeIcon />
